# OwlDNS

./: .gitignore  README.md  config.toml  pyproject.toml
scripts/: bench.py
src/owldns/: __init__.py  cli.py  config.py  resolver.py  server.py  types.py  utils.py
tests/: test_cli.py  test_cli_utils.py  test_config.py  test_resolver.py  test_server.py  test_utils.py
