[project]
name = "owldns"
version = "0.1.0"
description = "A lightweight, async DNS server in Python"
authors = [{ name = "cong", email = "cong.lv.yx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["dnslib", "uvloop>=0.19.0"]

[project.scripts]
owldns = "owldns.cli:main"

[tool.poetry]
packages = [{ include = "owldns", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
watchdog = "^4.0.0"

[tool.coverage.run]
omit = ["src/owldns/cli.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
